@@ -2,17 +2,19 @@ package net.minecraft.src;
 
 import java.util.Random;
 
-public class BTASurfaceBuilderAlpine extends BTASurfaceBuilder {
+public class BTASurfaceBuilderIcyPeaks extends BTASurfaceBuilder {
 	@Override
 	public void init(Random rand, long seed) {
 		super.init(rand, seed);
 		
 		if (this.treeNoiseGen == null);
 			this.treeNoiseGen = new BTAOpenSimplexOctaves(rand.nextLong(), 2);
+			
+		this.treeNoiseScale = 1/256D;
 	}
 	
 	public void generateTreesForBiome(World world, Random rand, BTAWorldConfigurationInfo generatorInfo) {
-		int numTrees = 20;
+		int numTrees = 3;
 
 		for (int i = 0; i < numTrees; ++i)
 		{
@@ -21,27 +23,16 @@ public class BTASurfaceBuilderAlpine extends BTASurfaceBuilder {
 			
 			WorldGenerator gen;
 			
-			if (this.treeNoiseGen.noise2(x, z, this.treeNoiseScale) - .25 > 0) {
-				if (rand.nextInt(5) == 0) {
-					gen = new BTAWorldGenTaiga5(false);
-				}
-				else {
-					gen = new BTAWorldGenPineTree(false, 2, 2);
-				}
+			if (rand.nextInt(3) == 0) {
+				gen = new BTAWorldGenTaiga5(false);
 			}
 			else {
-				if (rand.nextInt(3) == 0) {
-					gen = new BTAWorldGenTaiga5(false);
-				}
-				else {
-					gen = new WorldGenTaiga2(false);
-				}
+				gen = new WorldGenTaiga2(false);
 			}
 			
-			if (world.getHeightValue(x, z) > 85 && rand.nextInt(3) == 0)
+			if (this.treeNoiseGen.noise2(x, z, this.treeNoiseScale) + .5 > 0 && rand.nextInt(30) > 0) {
 				continue;
-			if (world.getHeightValue(x, z) > 100 && rand.nextInt(2) == 0)
-				continue;
+			}
 			
 			gen.setScale(1.0D, 1.0D, 1.0D);
 			gen.generate(world, rand, x, world.getHeightValue(x, z), z);
